fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  overflow: hidden;
+  overflow-y: scroll;
   font-family: sans-serif;
   font-size: 16px;
   line-height: 1.5;
